test/langtools/tools/javac/patterns/EnhancedVariableDeclInEnhancedForErrors.out
EnhancedVariableDeclInEnhancedForErrors.java:35:27: compiler.err.prob.found.req: (compiler.misc.inconvertible.types: java.lang.Object, EnhancedVariableDeclInEnhancedForErrors.Interface)
EnhancedVariableDeclInEnhancedForErrors.java:12:9: compiler.err.foreach.not.exhaustive.on.type: EnhancedVariableDeclInEnhancedForErrors.Point, java.lang.Object
EnhancedVariableDeclInEnhancedForErrors.java:18:9: compiler.err.foreach.not.exhaustive.on.type: EnhancedVariableDeclInEnhancedForErrors.Point, java.lang.Object
EnhancedVariableDeclInEnhancedForErrors.java:24:9: compiler.err.foreach.not.exhaustive.on.type: EnhancedVariableDeclInEnhancedForErrors.OPoint, EnhancedVariableDeclInEnhancedForErrors.OPoint
EnhancedVariableDeclInEnhancedForErrors.java:30:9: compiler.err.foreach.not.exhaustive.on.type: EnhancedVariableDeclInEnhancedForErrors.Rec, compiler.misc.type.captureof: 1, ?
- compiler.note.preview.filename: EnhancedVariableDeclInEnhancedForErrors.java, DEFAULT
- compiler.note.preview.recompile
5 errors
